# aoe-dashboard

./: .gitignore  README.md  app.py  pyproject.toml  setup.cfg  tox.ini
AoE_Quick_Replay_Stats/: README.md
recs/: AgeIIDE_Replay_174310702.aoe2record  output.csv
src/rec_downloader/: rec_download.py
src/rec_downloader/recs/: AgeIIDE_Replay_173084272.aoe2record  AgeIIDE_Replay_173249390.aoe2record
tests/: test_rec_download.py
